*
* 0.2.31
*

- NXSL: added functions trim(), ltrim(), and rtrim()
- Fixed issues: #267, #268, #269, #270


*
* 0.2.30
*

- Fixed various database upgrade issues in 0.2.29
- Fixed issues: #266


*
* 0.2.29
*

- Fixed database and agent upgrade issues in 0.2.28
- NXSL: explicit type cast improved


*
* 0.2.28
*

- Added encryption support for SNMP version 3
- Fixed compatibility issues with NetXMS SNMP version 3 implementation and 
  Cisco devices
- Automatic network discovery improved
- LOGSCAN subagent removed (superseded by LOGWATCH subagent)
- Fixed issues: #234, #259, #260, #261, #262, #263, #264


*
* 0.2.27
*

- Added support for SNMP version 3 (without encryption)
- Log monitoring improved
- Built-in scripting language (NXSL) improved
- Fixed issues: #223, #249, #250, #252, #253, #254, #255, #256, #258


*
* 0.2.26
*

- Fixed compilation problems on some UNIX platforms
- Fixed incorrect behaviour of Disk.Free parameter on some Windows systems
- Fixed broken Windows 2000 support (issue #248)


*
* 0.2.25
*

- Implemented automatic template application based on filters
- Implemented automatic node binding to containers based on filters
- Implemented database export and import
- Database checking tool (nxdbmgr) improved
- More standard parameters inplemented in Linux, FreeBSD, and Solaris subagents
- Removed inconsistencies in some parameters' behavior on different platforms
- DCI transformation scripts now can be tested from console
- Network maps improved
- Added support for matching Windows event log records by event source,
  severity, and event code
- Fixed issues: #197, #217, #239, #240, #241, #242, #243, #244, #245


*
* 0.2.24
*

- Critical bugfixes:
	- Compilation errors on FreeBSD
	- Errors in database schema if doing fresh install 


*
* 0.2.23
*

- Implemented event forwarding between NetXMS servers
- Added new subagent LOGWATCH for log monitoring
- Implemented syslog message monitoring on built-in syslog server